--- a/pages/test2.html
+++ b/pages/test2.html
@@ -1,162 +1,165 @@
-<!-- TRUSTED BY LEADING BRANDS -->
-<section class="w-full bg-[linear-gradient(180deg,#D82626_0%,#0055A4_52.4%,rgba(0,85,164,0)_100%)]">
-    <div class="max-w-[1679px] mx-auto px-16 sm:px-24 lg:px-40 py-40 sm:py-56 lg:py-80 flex flex-col gap-32 sm:gap-40">
+      <!-- TRUSTED BY LEADING BRANDS -->
+      <section class="w-full bg-[linear-gradient(180deg,#D82626_0%,#0055A4_52.4%,rgba(0,85,164,0)_100%)]">
+          <div
+              class="max-w-[1679px] mx-auto px-16 sm:px-24 lg:px-40 py-40 sm:py-56 lg:py-80 flex flex-col gap-32 sm:gap-40">
 
-        <!-- TITLE -->
-        <div class="flex flex-col items-center gap-12 sm:gap-16 text-center">
-            <div class="flex items-center gap-10">
-                <img src="../assets/images/white-truck.svg" alt="" class="w-20 h-20" />
-                <span class="text-12 sm:text-14 uppercase tracking-[1px] text-white/80 font-heading">
-                    Our Brands
-                </span>
-            </div>
+              <!-- TITLE -->
+              <div class="flex flex-col items-center gap-12 sm:gap-16 text-center">
+                  <div class="flex items-center gap-10">
+                      <img src="../assets/images/white-truck.svg" alt="" class="w-20 h-20" />
+                      <span class="text-12 sm:text-14 uppercase tracking-[1px] text-white/80 font-heading">
+                          Our Brands
+                      </span>
+                  </div>
 
-            <h2 class="font-heading text-28 sm:text-36 lg:text-44 font-bold capitalize text-center text-white">
-                Trusted By Leading Brands
-            </h2>
-        </div>
+                  <h2 class="font-heading text-28 sm:text-36 lg:text-44 font-bold capitalize text-center text-white">
+                      Trusted By Leading Brands
+                  </h2>
+              </div>
 
-        <!-- 4 CARDS AS CONTAINER -->
-        <div class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 xl:grid-cols-4 gap-20 lg:gap-30">
+              <!-- 4 CARDS (RESPONSIVE GRID) -->
+              <!-- 1 col mobile, 2 col tablet, 4 col from 1024px (lg) upward -->
+              <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-20 lg:gap-30 items-end">
 
-            <!-- CARD 1 -->
-            <article class="flex flex-col items-center gap-16 w-full max-w-[398px] mx-auto lg:mx-0">
-                <!-- IMAGE BLOCK -->
-                <div class="group relative w-full rounded-[10px] overflow-hidden">
-                    <div class="relative w-full h-[360px] sm:h-[460px] lg:h-[560px]">
-                        <img src="../assets/images/balaji.png" alt="Balaji" class="w-full h-full object-cover" />
+                  <!-- CARD 1 -->
+                  <article class="flex flex-col items-center gap-16 w-full max-w-[398px] mx-auto lg:mx-0">
+                      <!-- IMAGE BLOCK -->
+                      <div class="group relative w-full rounded-[10px] overflow-hidden">
+                          <div class="relative w-full h-[360px] sm:h-[460px] lg:h-[560px]">
+                              <img src="../assets/images/balaji.png" alt="Balaji" class="w-full h-full object-cover" />
 
-                        <!-- BLACK CIRCLE (hover) -->
-                        <button type="button"
-                            class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px] justify-center items-center transition-transform duration-200 group-active:scale-90">
-                            <span class="w-full h-full rounded-full bg-black"></span>
-                        </button>
+                              <!-- BLACK CIRCLE (hover) -->
+                              <button type="button"
+                                  class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px] justify-center items-center transition-transform duration-200 group-active:scale-90">
+                                  <span class="w-full h-full rounded-full bg-black"></span>
+                              </button>
 
-                        <!-- RED CAPTION OVERLAY -->
-                        <div class="absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20 bg-[rgba(216,38,38,0.80)] text-white
-                         translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
-                         transition-all duration-300">
-                            <p class="text-14 sm:text-16 leading-[22px] sm:leading-[26px]">
-                                Kataria constantly trying to find ways to improve performance
-                                and warehouse operations is area where supply chain managers
-                                can focus to gain maximum.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                              <!-- RED CAPTION OVERLAY -->
+                              <div class="absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20 bg-[rgba(216,38,38,0.80)] text-white
+                     translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
+                     transition-all duration-300">
+                                  <p class="text-14 sm:text-16 leading-[22px] sm:leading-[26px]">
+                                      Kataria constantly trying to find ways to improve performance
+                                      and warehouse operations is area where supply chain managers
+                                      can focus to gain maximum.
+                                  </p>
+                              </div>
+                          </div>
+                      </div>
 
-                <!-- BOTTOM LOGO + NAME (≈398 × 72) -->
-                <div class="flex items-center gap-10 px-16 sm:px-20">
-                    <img src="../assets/images/balaji_logo.png" alt="Balaji Logo"
-                        class="w-[93px] h-[72px] object-contain" />
-                    <p
-                        class="font-heading text-20 sm:text-24 lg:text-26 xl:text-30 font-bold capitalize text-black whitespace-nowrap">
-                        Balaji Wefers
-                    </p>
-                </div>
-            </article>
+                      <!-- BOTTOM LOGO + NAME (transparent bg so gradient shows) -->
+                      <div class="flex items-center gap-10 px-16 sm:px-20">
+                          <img src="../assets/images/balaji_logo.png" alt="Balaji Logo"
+                              class="w-[93px] h-[72px] object-contain" />
+                          <p
+                              class="font-heading text-20 sm:text-24 lg:text-26 xl:text-30 font-bold capitalize text-black whitespace-nowrap">
+                              Balaji Wefers
+                          </p>
+                      </div>
+                  </article>
 
-            <!-- CARD 2 -->
-            <article class="flex flex-col items-center gap-16 w-full max-w-[398px] mx-auto lg:mx-0">
-                <div class="group relative w-full rounded-[10px] overflow-hidden">
-                    <div class="relative w-full h-[360px] sm:h-[460px] lg:h-[560px]">
-                        <img src="../assets/images/cocacola.png" alt="Coca Cola" class="w-full h-full object-cover" />
+                  <!-- CARD 2 -->
+                  <article class="flex flex-col items-center gap-16 w-full max-w-[398px] mx-auto lg:mx-0">
+                      <div class="group relative w-full rounded-[10px] overflow-hidden">
+                          <div class="relative w-full h-[360px] sm:h-[460px] lg:h-[560px]">
+                              <img src="../assets/images/cocacola.png" alt="Coca Cola"
+                                  class="w-full h-full object-cover" />
 
-                        <button type="button"
-                            class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px] justify-center items-center transition-transform duration-200 group-active:scale-90">
-                            <span class="w-full h-full rounded-full bg-black"></span>
-                        </button>
+                              <button type="button"
+                                  class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px] justify-center items-center transition-transform duration-200 group-active:scale-90">
+                                  <span class="w-full h-full rounded-full bg-black"></span>
+                              </button>
 
-                        <div class="absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20 bg-[rgba(216,38,38,0.80)] text-white
-                         translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
-                         transition-all duration-300">
-                            <p class="text-14 sm:text-16 leading-[22px] sm:leading-[26px]">
-                                Kataria constantly trying to find ways to improve performance
-                                and warehouse operations is area where supply chain managers
-                                can focus to gain maximum.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                              <div class="absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20 bg-[rgba(216,38,38,0.80)] text-white
+                     translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
+                     transition-all duration-300">
+                                  <p class="text-14 sm:text-16 leading-[22px] sm:leading-[26px]">
+                                      Kataria constantly trying to find ways to improve performance
+                                      and warehouse operations is area where supply chain managers
+                                      can focus to gain maximum.
+                                  </p>
+                              </div>
+                          </div>
+                      </div>
 
-                <div class="flex items-center gap-10 px-16 sm:px-20">
-                    <img src="../assets/images/cocacola_logo.png" alt="Coca Cola Logo"
-                        class="w-[93px] h-[72px] object-contain" />
-                    <p
-                        class="font-heading text-20 sm:text-24 lg:text-26 xl:text-30 font-bold capitalize text-black whitespace-nowrap">
-                        Coca – Cola
-                    </p>
-                </div>
-            </article>
+                      <div class="flex items-center gap-10 px-16 sm:px-20">
+                          <img src="../assets/images/cocacola_logo.png" alt="Coca Cola Logo"
+                              class="w-[93px] h-[72px] object-contain" />
+                          <p
+                              class="font-heading text-20 sm:text-24 lg:text-26 xl:text-30 font-bold capitalize text-black whitespace-nowrap">
+                              Coca – Cola
+                          </p>
+                      </div>
+                  </article>
 
-            <!-- CARD 3 -->
-            <article class="flex flex-col items-center gap-16 w-full max-w-[398px] mx-auto lg:mx-0">
-                <div class="group relative w-full rounded-[10px] overflow-hidden">
-                    <div class="relative w-full h-[360px] sm:h-[460px] lg:h-[560px]">
-                        <img src="../assets/images/vadilal.png" alt="Vadilal Ice Cream"
-                            class="w-full h-full object-cover" />
+                  <!-- CARD 3 -->
+                  <article class="flex flex-col items-center gap-16 w-full max-w-[398px] mx-auto lg:mx-0">
+                      <div class="group relative w-full rounded-[10px] overflow-hidden">
+                          <div class="relative w-full h-[360px] sm:h-[460px] lg:h-[560px]">
+                              <img src="../assets/images/vadilal.png" alt="Vadilal Ice Cream"
+                                  class="w-full h-full object-cover" />
 
-                        <button type="button"
-                            class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px] justify-center items-center transition-transform duration-200 group-active:scale-90">
-                            <span class="w-full h-full rounded-full bg-black"></span>
-                        </button>
+                              <button type="button"
+                                  class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px] justify-center items-center transition-transform duration-200 group-active:scale-90">
+                                  <span class="w-full h-full rounded-full bg-black"></span>
+                              </button>
 
-                        <div class="absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20 bg-[rgba(216,38,38,0.80)] text-white
-                         translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
-                         transition-all duration-300">
-                            <p class="text-14 sm:text-16 leading-[22px] sm:leading-[26px]">
-                                Kataria constantly trying to find ways to improve performance
-                                and warehouse operations is area where supply chain managers
-                                can focus to gain maximum.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                              <div class="absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20 bg-[rgba(216,38,38,0.80)] text-white
+                     translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
+                     transition-all duration-300">
+                                  <p class="text-14 sm:text-16 leading-[22px] sm:leading-[26px]">
+                                      Kataria constantly trying to find ways to improve performance
+                                      and warehouse operations is area where supply chain managers
+                                      can focus to gain maximum.
+                                  </p>
+                              </div>
+                          </div>
+                      </div>
 
-                <div class="flex items-center gap-10 px-16 sm:px-20">
-                    <img src="../assets/images/vadilal_logo.png" alt="Vadilal Logo"
-                        class="w-[93px] h-[72px] object-contain" />
-                    <p
-                        class="font-heading text-20 sm:text-24 lg:text-26 xl:text-30 font-bold capitalize text-black whitespace-nowrap">
-                        Vadilal Ice Cream
-                    </p>
-                </div>
-            </article>
+                      <div class="flex items-center gap-10 px-16 sm:px-20">
+                          <img src="../assets/images/vadilal_logo.png" alt="Vadilal Logo"
+                              class="w-[93px] h-[72px] object-contain" />
+                          <p
+                              class="font-heading text-20 sm:text-24 lg:text-26 xl:text-30 font-bold capitalize text-black whitespace-nowrap">
+                              Vadilal Ice Cream
+                          </p>
+                      </div>
+                  </article>
 
-            <!-- CARD 4 -->
-            <article class="flex flex-col items-center gap-16 w-full max-w-[398px] mx-auto lg:mx-0">
-                <div class="group relative w-full rounded-[10px] overflow-hidden">
-                    <div class="relative w-full h-[360px] sm:h-[460px] lg:h-[560px]">
-                        <img src="../assets/images/accord.png" alt="Accord Ceramics"
-                            class="w-full h-full object-cover" />
+                  <!-- CARD 4 -->
+                  <article class="flex flex-col items-center gap-16 w-full max-w-[398px] mx-auto lg:mx-0">
+                      <div class="group relative w-full rounded-[10px] overflow-hidden">
+                          <div class="relative w-full h-[360px] sm:h-[460px] lg:h-[560px]">
+                              <img src="../assets/images/accord.png" alt="Accord Ceramics"
+                                  class="w-full h-full object-cover" />
 
-                        <button type="button"
-                            class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px] justify-center items-center transition-transform duration-200 group-active:scale-90">
-                            <span class="w-full h-full rounded-full bg-black"></span>
-                        </button>
+                              <button type="button"
+                                  class="hidden group-hover:flex absolute top-20 right-20 w-[50px] h-[50px] p-[1px] justify-center items-center transition-transform duration-200 group-active:scale-90">
+                                  <span class="w-full h-full rounded-full bg-black"></span>
+                              </button>
 
-                        <div class="absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20 bg-[rgba(216,38,38,0.80)] text-white
-                         translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
-                         transition-all duration-300">
-                            <p class="text-14 sm:text-16 leading-[22px] sm:leading-[26px]">
-                                Kataria constantly trying to find ways to improve performance
-                                and warehouse operations is area where supply chain managers
-                                can focus to gain maximum.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+                              <div class="absolute inset-x-0 bottom-0 px-20 sm:px-30 py-16 sm:py-20 bg-[rgba(216,38,38,0.80)] text-white
+                     translate-y-full opacity-0 group-hover:translate-y-0 group-hover:opacity-100
+                     transition-all duration-300">
+                                  <p class="text-14 sm:text-16 leading-[22px] sm:leading-[26px]">
+                                      Kataria constantly trying to find ways to improve performance
+                                      and warehouse operations is area where supply chain managers
+                                      can focus to gain maximum.
+                                  </p>
+                              </div>
+                          </div>
+                      </div>
 
-                <div class="flex items-center gap-10 px-16 sm:px-20">
-                    <img src="../assets/images/accord_logo.png" alt="Accord Logo"
-                        class="w-[93px] h-[72px] object-contain" />
-                    <p
-                        class="font-heading text-20 sm:text-24 lg:text-26 xl:text-30 font-bold capitalize text-black whitespace-nowrap">
-                        Ceramics
-                    </p>
-                </div>
-            </article>
+                      <div class="flex items-center gap-10 px-16 sm:px-20">
+                          <img src="../assets/images/accord_logo.png" alt="Accord Logo"
+                              class="w-[93px] h-[72px] object-contain" />
+                          <p
+                              class="font-heading text-20 sm:text-24 lg:text-26 xl:text-30 font-bold capitalize text-black whitespace-nowrap">
+                              Ceramics
+                          </p>
+                      </div>
+                  </article>
 
-        </div>
-    </div>
-</section>
+              </div>
+          </div>
+      </section>
